# universal-cognitive-schema

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_stage1.md  RFC-0001.md  RFC-0002.md  RFC-0003.md  RFC-0004.md  SECURITY.md  UCS_Governance_v1.md  UCS_Trust_Fabric_v3.md  attest.py  capture_profile.py  governance.py  hardened_spec.md  posthumous_decision_framework.md  provenance_v3.py  pyproject.toml  stage1_mvp.py  test_governance.py  trust_anchor.py  trust_score.py  ucs-governance.schema.json  universal_cognitive_schema_roadmap.md
# tests/: test_stage1.py
.github/workflows/: publish.yml  tests.yml
prototypes/: trust_fabric_v3.jsx
rfcs/: RFC-0001.md
schema/: ucs-profile-schema.json  ucs-v0.1.0.json  ucs.schema.json
schema/examples/: full.ucs.json  minimal.ucs.json  sample-profile.json
tests/: test_fidelity_sanitiser.py  test_governance.py  test_parser.py  test_schema.py
tests/fixtures/: chatgpt_export_mock.json
ucs_parser/: __init__.py  cli.py  fidelity.py  models.py  parser.py  sanitiser.py  validator.py
ucs_stage1_bundle/schema/examples/: sample-profile.json
