[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucs-parser"
version = "0.1.0"
description = "Reference parser for the Universal Cognitive Schema — portable AI identity standard"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "llm", "portability", "identity", "schema", "chatgpt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
validate = ["jsonschema>=4.0"]
dev = [
    "pytest>=7.0",
    "jsonschema>=4.0",
]

[project.scripts]
ucs = "ucs_parser.cli:main"

[project.urls]
Homepage    = "https://github.com/XwhyZ-WHYLD/universal-cognitive-schema"
Repository  = "https://github.com/XwhyZ-WHYLD/universal-cognitive-schema"
Issues      = "https://github.com/XwhyZ-WHYLD/universal-cognitive-schema/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ucs_parser*"]

[tool.setuptools.package-data]
"*" = ["schema/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
